--- a/wp-content/themes/theiceplant/assets/scss/components/_woocommerce.scss
+++ b/wp-content/themes/theiceplant/assets/scss/components/_woocommerce.scss
@@ -422,6 +422,13 @@
             }
         }
     }
+    .product_cat-books-special-editions {
+        div {
+            div.summary {
+                margin-bottom: 0!important;
+            }
+        }
+    }
     .product_cat-shirts {
         max-width: 850px;
         font-size: 0;
